@@ -52,8 +52,5 @@
 
  * Add symbol versioning to the client library.
 
- * Add sequence protection to the required GSSAPI flags.  Make replay
-   protection optional, since remctl 0.6 doesn't support it.
-
  * Add a dummy object to libportable in case it would otherwise be empty,
    needed for Solaris 10.
